[WIP] Sonar fixes.